color contrast fixes

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -57,13 +57,13 @@ $provost-blue: #03357A;
 $provost-lightblue: #C0DBFF;
 $provost-grey: #F0F1F5;
 
-$success: #28a745;
+$success: #1e7e34;
 $warning: #ffc107;
 $danger: #dc3545;
 
-$inprogress:#6D39c5;
-$testing:#318B96;
-$ideation:#CF712D;
+$inprogress: #4b2a8a;
+$testing: #236b6e;
+$ideation: #a3541f;
 
 $primary: $provost-blue;
 $danger: $uconn-red;
